First_Step/data/45/234/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Executable.java:22: error: cannot find symbol
        return Tools.tab.sortBubble();
                    ^
  symbol:   variable tab
  location: class Tools
1 error
Not compiled
--|>
Grade :=>>0.00000
